# Traefik-Clouflare-Tunnel-Auto

./: Dockerfile  README.md  cf_utils.py  main.py  pyproject.toml  requirements.txt
.github/workflow/: docker-image.yml
.github/workflows/: docker-image.yml
example/: .env.example  .gitignore  docker-compose.yml  env.example  static-traefik.yml
example/dynamic/: whoami.yml
